game video card complete

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
          <div class="logo-container">
              <img src="images/Frame.png" alt="">
-             <h1 class="website-name"><span>G</span>amer</h1>
+             <h1 class="website-name"><span class="website-name-title">G</span>amer</h1>
          </div>
  
          <div class="nav-menu">    
@@ -50,7 +50,7 @@
         </div>
 </section>
 
-<!-- ---------------Section-2 ---------------->
+<!-- ---------------Section-2 design---------------->
 <section class="main-menu-second-container">
     <div class="pngwing-container image-container">
         <img class="first-section-iamge" src="images/pngwing 4.png" alt="">
@@ -62,7 +62,47 @@
         <p class="public-description-style">Our purpose...<br>
             <b>“unleash the gamer in everyone”</b></p>
     </div>
-
 </section>
+
+<!-- --------------section-3 design------------- -->
+<h2 class="funny-video-title">Online Games <span class="public-liner-gradient">Funny Videos</span></h2>
+<p class="public-description-style" style="text-align: center; margin-top: 5px;" >A Collection of Hilarious Videos to Brighten Your Day</p>
+
+<section>
+      <div class="card-container">
+        <div class="card">
+          <img class="game-img" src="./images/Rectangle 4.png" alt="" />
+          <p class="game-title">No Download. No Installs. Play games Instantly on Gamer.</p>
+          <div class="overlay">
+            <i class="fa-solid fa-play" style="color: #ffffff;"><br><span class="watch">watch now</span></i>
+          </div>
+        </div>
+        <div class="card">
+          <img class="game-img" src="./images/Rectangle 5.png" alt="" />
+          <p class="game-title">Did you score? #unblockedgames #school</p>
+          <div class="overlay">
+            <i class="fa-solid fa-play" style="color: #ffffff;"><br><span class="watch">watch now</span></i>
+          </div>
+        </div>
+        <div class="card">
+          <img class="game-img" src="./images/Rectangle 7.png" alt="" />
+          <p class="game-title">Breaking game records like OG</p>
+          <div class="overlay">
+            <i class="fa-solid fa-play" style="color: #ffffff;"><br><span class="watch">watch now</span></i>
+          </div>
+        </div>
+        <div class="card">
+          <img class="game-img" src="./images/Rectangle 6.png" alt="" />
+          <p class="game-title">Busted gaming on school laptop, but you are still lit.</p>
+          <div class="overlay">
+            <i class="fa-solid fa-play" style="color: #ffffff;"><br><span class="watch">watch now</span></i>
+          </div>
+        </div>
+      </div>
+  </section>
+
+<!-- ------------------section-4 design-------------------- -->
+
+
 </body>
 </html>
